cmake_minimum_required(VERSION 2.6)
project(fractal_demo)
set(CMAKE_CXX_STANDARD 17)
find_package(OpenMP)
if (OPENMP_FOUND STREQUAL "TRUE") #Fix Needed - CMP0012: if() only checks boolean constants and numbers
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_executable(fractal_demo main.cpp BitMapFileHeader.hpp BitMapInfoHeader.hpp BitMap.cpp BitMap.hpp Mandelbrot.cpp Mandelbrot.hpp zoom.cpp zoom.hpp zoomlist.cpp zoomlist.hpp FractalCreator.cpp FractalCreator.hpp)
set(GCC_ERROR_FLAGS "-Wall -Wextra -pedantic -Werror")
set(GCC_OPTIMIZATION_REPORT "-Ofast -fopt-info-vec-all=opt_report.txt -march=native")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_ERROR_FLAGS} ${GCC_OPTIMIZATION_REPORT}")
